--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h2>🚗 User Dashboard</h2>
+  <h2> User Dashboard</h2>
   <button id="logoutBtn">Logout</button>
 
   <h3>Search EV Bunks</h3>
