--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="container">
-    <h1>⚡ Welcome to EV Recharge Bunk ⚡</h1>
+    <h1> Welcome to EV Recharge Bunk </h1>
     <p>Find and book your nearest EV charging slot with ease!</p>
 
     <div class="action-links">
